# FirstApp

./: .gitignore  CMakeLists.txt
dependencies/GLAD/include/glad/: glad.h
res/shaders/: point_light.frag  point_light.vert  shader.frag  shader.vert  shader_instanced.vert
src/: FirstApp.cpp  FirstApp.h  Global.h  MainWindow.cpp  MainWindow.h  Simulation2DDialog.cpp  Simulation2DDialog.h  main.cpp
src/ecs/: SpartSets.h  ecs.h
src/entities/: Blank.cpp  Blank.h  Entity.cpp  Entity.h  GrindingWheel.cpp  GrindingWheel.h  GrindingWheelController.cpp  GrindingWheelController.h  MotionControllerBase.h
src/lve/: LveAdapter.cpp  LveAdapter.h  LveBuffer.cpp  LveBuffer.h  LveCamera.cpp  LveCamera.h  LveDescriptors.cpp  LveDescriptors.h  LveDevice.cpp  LveDevice.h  LveFrameInfo.h  LveGlobalConfig.h  LveKeyboardController.h  LveModel.cpp  LveModel.h  LveObject.cpp  LveObject.h  LvePipeline.cpp  LvePipeline.h  LveRenderer.cpp  LveRenderer.h  LveTexture.cpp  LveTexture.h  LveTextureManager.cpp  LveTextureManager.h  LveUtils.h  LveWindow.cpp  LveWindow.h  RenderSystem.cpp  RenderSystem.h  lveSwapChain.cpp  lveSwapChain.h
src/lve/systems/: PointLightSystem.cpp  PointLightSystem.h  RenderSystem.cpp  RenderSystem.h
src/motion_control/: GrindingWheelController.h  MotionControllerBase.h
